# pdz-denovo

./: .gitignore  How-To-Run-Commands.txt  README.md  pyproject.toml  requirements.txt
.github/workflows/: tests.yml
app/: streamlit_app.py
configs/: config.yaml
configs/model/: flow.yaml
configs/optimize/: moo.yaml
configs/oracle/: default.yaml
docs/: PLAN.md  REPORT.md
scripts/: benchmark_optimizers.py  download_data.py  download_proteinmpnn.py  download_training_data.py  fetch_wheel.ps1  run_cycle.py  setup_env.ps1  train_generator.py  validate_designs.py  verify_torch.py
src/pdz_denovo/fold/: __init__.py  esmfold.py  self_consistency.py
src/pdz_denovo/generative/: __init__.py  dataset.py  egnn.py  flow.py  frames.py  sample.py  train.py
src/pdz_denovo/loop/: __init__.py  dbtl.py
src/pdz_denovo/optimize/: __init__.py  features.py  nsga2.py  pareto.py  qnehvi.py  random_baseline.py
src/pdz_denovo/oracle/: __init__.py  base.py  binding.py  solubility.py  stability.py  stack.py  types.py
src/pdz_denovo/sequence/: __init__.py  motif.py  proteinmpnn.py
src/pdz_denovo/tracking/: __init__.py  mlflow_logger.py
src/pdz_denovo/utils/: common.py
tests/: test_phase0_scaffold.py  test_phase1_oracle.py  test_phase2_generative.py  test_phase3_sequence.py  test_phase4_fold.py  test_phase5_optimize.py  test_phase6.py
