[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pdz-denovo"
version = "0.1.0"
description = "Closed-loop de novo design of PSD-95 PDZ-domain binders via SE(3) flow matching and multi-objective optimization"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Sanjay" }]

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.ruff]
line-length = 100
target-version = "py310"
select = ["E", "F", "I", "W", "UP", "B"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q -m 'not esm'"
markers = [
    "esm: tests that load ESM-2 weights (heavy; run with `pytest -m esm`)",
]
filterwarnings = ["ignore::DeprecationWarning"]
